--- a/Design_resume/css/style.css
+++ b/Design_resume/css/style.css
@@ -116,7 +116,6 @@ ul, li{
     top: 240px;
     left: 340px;
     font-family: 'KOHIBaeumOTF';
-    font-weight: bold;
     opacity: 0;
     transition: 2s;
 }
@@ -138,6 +137,7 @@ ul, li{
     height: 300px;
     position: relative;
     z-index: 99;
+    left: 10px;
 }
 #section1 .photo .p_bg1{
     position: absolute;
@@ -245,14 +245,14 @@ ul, li{
 #section1 .b2{
     position: absolute;
     bottom: 32px;
-    left: 3%;
+    left: 0;
     transform: rotate(-30deg);
 }
 
 .drawsvg,svg {
     width: 100%; 
     height: 198px; 
-    margin-top: 26px;
+    margin-top: 11px;
 }
 
 .stroke {
@@ -348,27 +348,49 @@ ul, li{
     transform: rotate(270deg);
     position: absolute;
     top: 58%;
-    left: -3%;
+    left: 5450px;
     color: #000;
 }
+#section2 .vis .t1{
+    background: url(../images/bnr6.jpeg) no-repeat;
+    background-size: 60%;
+    background-position: 50%;
+}
 #section2 .vis .t2{
-    background: url(../images/bnr2.jpg) no-repeat center/cover;
+    background: url(../images/bnr7.jpg) no-repeat center/cover;
 }
 #section2 .vis .t3{
+    background: url(../images/bnr5.jpeg) no-repeat center;
+    background-size: contain;
+    background-position-y: 37%;
+}
+#section2 .vis .t5{
+    background: url(../images/bnr2.jpg) no-repeat center/cover;
+}
+#section2 .vis .t6{
     background: url(../images/bnr4.jpg) no-repeat center;
     background-color: rgba(156,158,200,0.7);
 }
-#section2 .vis .t4{
+#section2 .vis .t7{
     background: url(../images/bnr3.jpg) no-repeat center/cover;
 }
+#section2 .vis .t1 p{
+    left: -310px;
+}
 #section2 .vis .t2 p{
-    left: 22%;
+    left: 1620px;
 }
 #section2 .vis .t3 p{
-    left: 47%;
+    left: 3530px;
 }
-#section2 .vis .t4 p{
-    left: 72%;
+#section2 .vis .t5 p{
+    left: 7380px;
+}
+#section2 .vis .t6 p{
+    left: 9290px;
+}
+#section2 .vis .t7 p{
+    left: 11210px;
 }
 #section2 .vis .title p::before{
     content: "";
@@ -412,7 +434,6 @@ ul, li{
     font-size: 20px;
     font-weight: 200;
     position: relative;
-    width: 500px;
     margin-bottom: 30px;
 }
 #section2 .vis .title + div dl dd span{
@@ -523,7 +544,7 @@ ul, li{
     height: 400px;
     background: #0d4f18d0;
     position: absolute;
-    top: 38%;
+    top: 37%;
     right: 200px;
     opacity: 0;
     transition: 1s;
@@ -531,7 +552,7 @@ ul, li{
     z-index: 9999;
 }
 #section3 .hex.on{
-    clip-path: polygon(32% -5%, 47% -42%, 95% 43%, 68% 78%, 36% 77%, 16% 43%);
+    clip-path: polygon(33% -5%, 47% -43%, 95% 43%, 74% 92%, 33% 81%, 8% 44%);
     opacity: 1;
 }
 #section3 .pos ul li h2 span{
